Dark mode scrollbar color fixed

--- a/css/common.css
+++ b/css/common.css
@@ -14,7 +14,7 @@ body {
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: #00000022;
+    background-color: var(--scrollbar-color);
 }
 
 
